compiler/tests/compile-error/quot-by-zero.arret
(import [stdlib base])

(def _ (quot 1 0))
      ;^^^^^^^^^^ ERROR division by zero

(defn main! () ->! ())